--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -12,31 +12,6 @@
     color: white;
 }
 
-.popup {
-    width: 260px;
-    height: 220px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background-color: white;
-    border-radius: 8%;
-    text-align: center;
-}
-
-.close-button {
-    position: absolute;
-    top: 3px;
-    right: 3px;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 20px;
-    cursor: pointer;
-    font-size: large;
-}
-
 /* Recent Games Section */
 
 #recentGames {
@@ -231,4 +206,70 @@ h3 {
     width: 140px;
     margin-bottom: 8px;
     margin-right: 12px;
+}
+
+/* Expand Favorites */
+
+#expandpopup {
+    width: 680px;
+    height: 460px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #242526;
+    border-radius: 8%;
+    text-align: center;
+    justify-content: center;
+    z-index: 201;
+}
+
+.close-button {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
+    font-size: x-large;
+    color: white;
+}
+
+#favoritespopup {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.favoriteCard {
+    display: flex;
+    flex-direction: column;
+    background-color: #3A3B3C;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    /* margin: 4px 10px; */
+}
+
+.favoriteCard img {
+    width: 95px;
+    height: 95px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.favoriteCard span {
+    width: 95px;
+    height: 50px;
+    text-wrap: wrap;
+}
+
+.remove {
+    margin-bottom: 7px;
+    color: #a73939 !important;
+    background: transparent;
+    border: 2px solid #a73939;
+    border-radius: 5px;
 }
