--- a/templates/profile.html
+++ b/templates/profile.html
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="expandpopup" class="popup">
+                <div id="expandpopup" class="popup Hide">
                     <p class="close-button">x</p>
                     <h3 style="margin-top: 10px;">Edit Your Favorites</h3>
                     <div id="favoritespopup">
